--- a/main.tex
+++ b/main.tex
@@ -26,13 +26,13 @@
 \newcommand{\code}[1]{\texttt{#1}}
 
 \begin{document}
-\title{Short Paper: QuanTEEum: Quantum Cryptography via TEEs}
-\author{[Redacted for review]}
-\authorrunning{[Redacted for review]}
+\title{QuanTEEum: Quantum Cryptography via TEEs}
+% \author{[Redacted for review]}
+% \authorrunning{[Redacted for review]}
 \institute{[Redacted for review]}
-% \author{Shoaib Ahmed}
-% \authorrunning{S. Ahmed}
-% \institute{Independent Researcher\\ \email{sufialhussaini@gmail.com}}
+\author{Shoaib Ahmed}
+\authorrunning{S. Ahmed}
+\institute{Independent Researcher\\ \email{sufialhussaini@gmail.com}}
 \maketitle
 
 \begin{abstract}
