--- a/sources/main.tex
+++ b/sources/main.tex
@@ -29,7 +29,7 @@
 \title{QuanTEEum: Quantum Cryptography via TEEs}
 % \author{[Redacted for review]}
 % \authorrunning{[Redacted for review]}
-\institute{[Redacted for review]}
+% \institute{[Redacted for review]}
 \author{Shoaib Ahmed}
 \authorrunning{S. Ahmed}
 \institute{Independent Researcher\\ \email{sufialhussaini@gmail.com}}
