Update \institute to Cycles Protocol SA

--- a/sources/main.tex
+++ b/sources/main.tex
@@ -32,7 +32,7 @@
 % \institute{[Redacted for review]}
 \author{Shoaib Ahmed}
 \authorrunning{S. Ahmed}
-\institute{Independent Researcher\\ \email{sufialhussaini@gmail.com}}
+\institute{Cycles Protocol SA\\ \email{sufialhussaini@gmail.com}}
 \maketitle
 
 \begin{abstract}
